# SecondWind

./: .gitignore  .gitmodules
SecondWind/: SWAppDelegate.h  SWAppDelegate.m  SWAppDelegate.mm  SWGlobalConsts.h  SWViewController.h  SWViewController.m  SecondWind-Info.plist  SecondWind-Prefix.pch  main.m
SecondWind.xcodeproj/: project.pbxproj
SecondWind/Base.lproj/: Localizable.strings  Main.storyboard
SecondWind/Classes/Cells/: SWAlbumCell.h  SWAlbumCell.m  SWAlbumTrackCell.h  SWAlbumTrackCell.m  SWArtistCell.h  SWArtistCell.m  SWArtistDetailHeader.h  SWArtistDetailHeader.m  SWBaseCell.h  SWBaseCell.m  SWHintCell.h  SWHintCell.m  SWPlaylistCell.h  SWPlaylistCell.m  SWSearchHeader.h  SWSearchHeader.m  SWTrackCell.h  SWTrackCell.m  SWTracksFlowLayout.h  SWTracksFlowLayout.m
SecondWind/Classes/CollectionControllers/: SWAlbumDetailViewController.h  SWAlbumDetailViewController.m  SWAlbumsViewController.h  SWAlbumsViewController.m  SWArtistDetailsViewController.h  SWArtistDetailsViewController.m  SWArtistsViewController.h  SWArtistsViewController.m  SWHintsViewController.h  SWHintsViewController.m  SWNowPlayingViewController.h  SWNowPlayingViewController.m  SWPlayerViewController.h  SWPlayerViewController.m  SWPlaylistDetailsViewController.h  SWPlaylistDetailsViewController.m  SWPlaylistsViewController.h  SWPlaylistsViewController.m  SWTracksViewController.h  SWTracksViewController.m
SecondWind/Classes/Controls/: SWPlayerMenuItemView.h  SWPlayerMenuItemView.m  SWTopTabBar.h  SWTopTabBar.m
SecondWind/Classes/CoreDataLayer/: SWCoreDataManager.h  SWCoreDataManager.m
SecondWind/Classes/DataModels/: SWPlayerMenuItem.h  SWPlayerMenuItem.m
SecondWind/Classes/Disclaimer/: SWDisclaimerViewController.h  SWDisclaimerViewController.m
SecondWind/Classes/TabBar/: SWMainTabBarViewController.h  SWMainTabBarViewController.m
SecondWind/Classes/Views/: SWPlayerRoundedView.h  SWPlayerRoundedView.m  SWPlayerView.h  SWPlayerView.m
SecondWind/Images.xcassets/album_overlay.imageset/: Contents.json
SecondWind/Images.xcassets/artist_overlay.imageset/: Contents.json
SecondWind/Images.xcassets/back_arrw.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_auto.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_auto_bttm_mask.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_auto_top_mask.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_fix.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_fix_bttm_mask.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_fix_top_mask.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_no.imageset/: Contents.json
SecondWind/Images.xcassets/bg_player_no_bttm_mask.imageset/: Contents.json
SecondWind/Images.xcassets/cadence.imageset/: Contents.json
SecondWind/en.lproj/: Localizable.strings
SecondWind/ru-RU.lproj/: Localizable.strings  Main.strings
SecondWindLib/SecondWindLib/singasteinn/: CMakeLists.txt
SecondWindLib/SecondWindLib/singasteinn/ios-cmake/toolchain/: iOS.cmake
SecondWindLib/SecondWindLib/singasteinn/jni/: Android.mk  NativeScaler.cpp  NativeScaler.h
SecondWindLib/SecondWindLib/singasteinn/jni/lib/log4cplus-1.1.1/: CMakeLists.txt  CMakeLists.txt.orig  Log4CPlusCPack.cmake
SecondWindLib/SecondWindLib/singasteinn/jni/lib/log4cplus-1.1.1/src/: CMakeLists.txt
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123/: Android.mk  su_eqx_singasteinn_MpegDecoder.h
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/: Makefile  config.status  configure  libmpg123.pc  libtool
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/autom4te.cache/: output.0  traces.0
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/doc/: Makefile
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/src/: Makefile  Makefile.am  config.h  wrapper.cpp
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/src/libmpg123/: Android.mk  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.orig  cmake_install.cmake  libmpg123.dylib
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/src/libmpg123/CMakeScripts/: mpg123_postBuildPhase.makeRelease
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/src/libmpg123/Debug/: libmpg123.dylib
SecondWindLib/SecondWindLib/singasteinn/jni/lib/mpg123-1.14.4/src/output/: Makefile
SecondWindLib/SecondWindLib/singasteinn/jni/lib/openal/: CMakeLists.txt
SecondWindLib/SecondWindLib/singasteinn/jni/lib/soundtouch/: STTypes.h  cpu_detect.h
SecondWindLib/SecondWindLib/singasteinn/jni/lib/soundtouch/include/: STTypes.h
SecondWindLib/SecondWindLib/singasteinn/jni/singasteinn/: AndroidSensorSource.cpp  AndroidSensorSource.h  AppleAccelerometerImpl.h  AppleDecoderImpl.h  AppleDecoderImpl.m  ConfigParser.h  DummyUi.cpp  FakeSensorSource.cpp  FakeSensorSource.h  ISoundStream.h  ITempoStorage.h  IUI.h  LogcatAppender.h  LoggingMixin.h  MpegDecoder.cpp  PySongAnalyzer.h  RingBuffer.h  SensorLogger.h  SimpleTempoStorage.cpp.orig  SingasteinnEngine.cpp  SingasteinnEngine.cpp.orig  SmartPtr.h  Song.cpp  Song.cpp.orig  SongStream.cpp.orig  TempoScaler.cpp  Thread.cpp  Thread.h  main.cpp  platform.h
SecondWindLib/SecondWindLib/singasteinn/jni/singasteinn/interface/: FittingControllerImpl.h  IFittingController.h  PlaybackControllerImpl.cpp
SecondWindLib/SecondWindLib/singasteinn/jni/singasteinn/output/: IStreamPlayer.h  OpenALStreamPlayer.cpp  OpenALStreamPlayer.h  SlesStreamPlayer.cpp  SlesStreamPlayer.h  WAvStreamWriter.cpp
SecondWindLib/SecondWindLib/singasteinn/jni/singasteinn/tests/: main-playlistiter.cpp
SecondWindLib/SecondWindLib/singasteinn/jni/singasteinn/threading/: WorkerTask.cpp  WorkerTask.h
SecondWindTests/: SecondWindTests.m
(+101 files in other folders)
